# websocket-chat

./: Cargo.toml  README.md
src/: main.rs
static/: index.html  script.js
