[package]
name = "websocket-chat"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.5", features = ["ws"] }
tokio = { version = "1.0", features = ["full"] }
tower-http = { version = "0.3.0", features = ["fs", "trace"] }
futures = "0.3"